# FastAPI-MongoDB

./: README.md  main.py  pyproject.toml  urls.py
api/: main.py
api/routers/: items.py
db/: database.py
parsing/: scrape.py
